--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-3">
             <p>Actions for the group</p>
-            <ul>
+            <ul class="list">
                 <li th:if="${!member}">
                     <form th:object="${group}" th:action="@{'/joingroup/' + ${group.id}}" method="post">
                         <button class="btn btn-default" type="submit">Join group</button>
@@ -25,7 +25,7 @@
                 </li>
             </ul>
             <p>General actions</p>
-            <ul>
+            <ul class="list">
                 <li>
                     <form th:action="@{/groups}">
                         <button type="submit" class="btn btn-default">Groups</button>
