--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-md-3">
             <h4>Conversastions</h4>
-            <ul class="interlocutors">
+            <ul class="list">
                 <li th:each="user : ${interlocutors}">
                     <a th:href="@{'/messages/' + ${loggedUserId} + '/' + ${user.id}}" class="getMessages" th:text="${user.firstName} + ' ' + ${user.lastName}"></a>
                 </li>
@@ -16,7 +16,7 @@
         </div>
         <div class="col-md-6">
             <h3 th:if="${interlocutor}" th:text="${interlocutor.firstName + ' ' + interlocutor.lastName}"></h3>
-            <ul class="messages">
+            <ul class="messages list">
                 <div th:each="message : ${messages}">
                     <li th:if="${message.sender.id} == ${loggedUserId}" class="sendMessage"
                         th:text="${message.content}"></li>
