--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -52,8 +52,7 @@
                                         <a href="#" class="cancelInvitation">Cancel invitation</a>
                                     </li>
                                     <li>
-                                        <a class="sendMessageTo" th:href="@{'/message/' + ${user.id}}">Send
-                                            Message</a>
+                                        <a class="sendMessageTo" th:href="@{'/message/' + ${user.id}}">Send Message</a>
                                     </li>
                                 </ul>
                             </div>
