--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -6,9 +6,7 @@
 <div id="content" class="container">
     <div class="row">
         <div class="col-md-3">
-            <form th:action="@{/creategroup}" method="get">
-                <button class="btn btn-default" type="submit">Create group</button>
-            </form>
+            <a th:href="@{/creategroup}">Create group</a>
         </div>
         <div class="col-md-6">
             <div th:if="${groups.size() != 0}">
