on user profile buttons for commenst are in the middle of comment

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -54,7 +54,7 @@ textarea {
     padding-top: 5px;
 }
 
-.commentContent {
+.commentText {
     background-color: white;
 }
 
@@ -121,4 +121,13 @@ a.groupName {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.commentContent {
+    display: flex;
+    align-items: center;
+}
+
+p {
+    margin-bottom: 0px;
 }
