verification for deleting user from group

--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -9,6 +9,7 @@
     <h1 th:if="${sameUser}" th:text="${sameUser}"></h1>
     <h1 th:if="${haveThisFriend}" th:text="${haveThisFriend}"></h1>
     <h1 th:if="${invitationExists}" th:text="${invitationExists}"></h1>
+    <h1 th:if="${notAnAdmin}" th:text="${notAnAdmin}"></h1>
 </div>
 </body>
 </html>
