--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -10,6 +10,7 @@
     <h1 th:if="${haveThisFriend}" th:text="${haveThisFriend}"></h1>
     <h1 th:if="${invitationExists}" th:text="${invitationExists}"></h1>
     <h1 th:if="${notAnAdmin}" th:text="${notAnAdmin}"></h1>
+    <h1 th:if="${notAMember}" th:text="${notAMember}"></h1>
 </div>
 </body>
 </html>
