validation for messages, cant read someone else conversations

--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -11,6 +11,7 @@
     <h1 th:if="${invitationExists}" th:text="${invitationExists}"></h1>
     <h1 th:if="${notAnAdmin}" th:text="${notAnAdmin}"></h1>
     <h1 th:if="${notAMember}" th:text="${notAMember}"></h1>
+    <h1 th:if="${messages}" th:text="${messages}"></h1>
 </div>
 </body>
 </html>
