--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -10,7 +10,8 @@
             <h4>Conversastions</h4>
             <ul class="list">
                 <li th:each="user : ${interlocutors}">
-                    <a th:href="@{'/messages/' + ${loggedUserId} + '/' + ${user.id}}" class="getMessages" th:text="${user.firstName} + ' ' + ${user.lastName}"></a>
+                    <a th:href="@{'/messages/' + ${user.id}}" class="getMessages"
+                       th:text="${user.firstName} + ' ' + ${user.lastName}"></a>
                 </li>
             </ul>
         </div>
