--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -12,6 +12,7 @@
     <h1 th:if="${notAnAdmin}" th:text="${notAnAdmin}"></h1>
     <h1 th:if="${notAMember}" th:text="${notAMember}"></h1>
     <h1 th:if="${messages}" th:text="${messages}"></h1>
+    <h1 th:if="${invitation}" th:text="${invitation}"></h1>
 </div>
 </body>
 </html>
