post methods in editing comments and statuses with validations

--- a/src/main/resources/templates/errors.html
+++ b/src/main/resources/templates/errors.html
@@ -13,6 +13,7 @@
     <h1 th:if="${notAMember}" th:text="${notAMember}"></h1>
     <h1 th:if="${messages}" th:text="${messages}"></h1>
     <h1 th:if="${invitation}" th:text="${invitation}"></h1>
+    <h1 th:if="${noInvitation}" th:text="${noInvitation}"></h1>
 </div>
 </body>
 </html>
