--- a/src/main/resources/templates/sendingMessage.html
+++ b/src/main/resources/templates/sendingMessage.html
@@ -10,6 +10,7 @@
         <div class="col-md-6">
             <div class="status">
                 <div class="statusContent">
+                    <p th:text="${receiver.firstName + ' ' + receiver.lastName}"></p>
                     <form th:action="@{'/sendmessage/' + ${receiver.id}}"
                           th:object="${message}" method="post">
                         <textarea id="message" class="form-control" th:field="*{content}" maxlength="3000"></textarea>
