template for changing informations about groups

--- a/src/main/resources/templates/group.html
+++ b/src/main/resources/templates/group.html
@@ -21,6 +21,9 @@
                 <li>
                     <a th:href="@{'/group/' + ${group.id} + '/members'}">Members</a>
                 </li>
+                <li>
+                    <a th:href="@{'/group/' + ${group.id} + '/info'}">Change group details</a>
+                </li>
             </ul>
             <p>General actions</p>
             <ul class="list">
